fixed the bad alignments for mobile bug that accured after the scrolling fix on the last update.

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -8,4 +8,5 @@ body {
   grid-template-columns: 1fr;
   overflow-x: hidden; //horizontal
   overflow-y: scroll; //vertical
+  width: 100vw;
 }
